--- a/tr/survey1.lang
+++ b/tr/survey1.lang
@@ -2,12 +2,11 @@
 
 
 ;Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
-Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
+Araştırmamıza katıldığınız için teşekkür ederiz. Size, internet kullanımınız ve özellikle tarayıcı yazılımınız hakkında bazı sorular sormak istiyoruz. “Tarayıcı”nız, web sayfalarını görüntüleyen ve internette sörf yapmanızı sağlayan yazılımdır. Anket formumuzun tamamlanması yaklaşık 3 dakika sürecektir.
 
 
 ;Which of the following age bands do you fall into?
-Which of the following age bands do you fall into?
-
+Hangi yaş aralığındasınız?
 
 ;16-24
 16-24
@@ -34,20 +33,19 @@ Which of the following age bands do you fall into?
 
 
 ;Please indicate your gender
-Please indicate your gender
+Cinsiyetiniz nedir?
 
 
 ;Male
-Male
+Erkek
 
 
 ;Female
-Female
+Kadın
 
 
-;Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-
+;Can I just check, which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
+Şu anda masaüstü veya dizüstü bilgisayarınızda, evde veya iş yerinizde hangi tarayıcıları kullanıyorsunuz?
 
 ;Apple Safari
 Apple Safari
@@ -70,151 +68,139 @@ Opera
 
 
 ;Another browser
-Another browser
+Başka bir tarayıcı
 
 
 ;Don’t know
-Don’t know
+Bilmiyorum
 
 
 ;How likely or unlikely are you to recommend Firefox to a friend or colleague?
-How likely or unlikely are you to recommend Firefox to a friend or colleague?
-
+Firefox'u bir yakınınıza veya iş arkadaşınıza tavsiye eder miydiniz?
 
 ;I am very likely and would consider making a recommendation without being asked
-I am very likely and would consider making a recommendation without being asked
-
+Çok büyük ihtimalle ederdim ve benden istenmese bile tavsiye etmeyi düşünürdüm
 
 ;I am quite likely to recommend Firefox and would do so if I was asked
-I am quite likely to recommend Firefox and would do so if I was asked
-
+Büyük ihtimalle ederdim ve benden istenirse tavsiye ederim
 
 ;I am neither likely nor unlikely
-I am neither likely nor unlikely
-
+Kararsızım
 
 ;I am quite unlikely to recommend Firefox
-I am quite unlikely to recommend Firefox
-
+Büyük ihtimalle Firefox'u tavsiye etmezdim
 
 ;I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
-I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
-
+Çok büyük ihtimalle Firefox'u tavsiye etmezdim ve Firefox'u kullanmamasını önermeyi de düşünürdüm
 
 ;And how much do you like or dislike Firefox?
-And how much do you like or dislike Firefox?
+Firefox'u ne kadar seviyor veya sevmiyorsunuz?
 
 
 ;Dislike a great deal
-Dislike a great deal
+Hiç sevmiyorum
 
 
 ;Dislike a little
-Dislike a little
-
+Pek hoşlanmıyorum
 
 ;Neither like nor dislike
-Neither like nor dislike
-
+Kararsızım
 
 ;Like a little
-Like a little
-
+Biraz seviyorum
 
 ;Like a great deal
-Like a great deal
-
+Çok seviyorum
 
 ;So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
-So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
+Genel olarak her şeyi göz önünde bulundurarak, Firefox sizi ne kadar tatmin ediyor veya etmiyor?
 
 
 ;Extremely dissatisfied
-Extremely dissatisfied
-
+Hiç tatmin etmiyor
 
 ;Dissatisfied
-Dissatisfied
+Tatmin etmiyor
 
 
 ;Somewhat dissatisfied
-Somewhat dissatisfied
+Nispeten tatmin etmiyor
 
 
 ;Neither satisfied nor dissatisfied
-Neither satisfied nor dissatisfied
+Kararsızım
 
 
 ;Somewhat satisfied
-Somewhat satisfied
-
+Nispeten tatmin ediyor
 
 ;Satisfied
-Satisfied
+Tatmin ediyor
 
 
 ;Extremely satisfied
-Extremely satisfied
+Çok tatmin ediyor
 
 
 ;For each of the following statements, could you please indicate whether you:
-For each of the following statements, could you please indicate whether you:
+Aşağıdaki önermelerin her biri için şu şıklardan birini seçer misiniz?:
 
 
 ;Were aware of this and believe it to be correct
-Were aware of this and believe it to be correct
+Bunun farkındayım ve doğru olduğuna inanıyorum
 
 
 ;Have seen this but were unsure if it was right
-Have seen this but were unsure if it was right
+Duymuştum ama doğru olduğundan emin değilim
 
 
 ;Have not heard of this before today, or I don’t know
-Have not heard of this before today, or I don’t know
+Bugüne kadar duymamıştım veya bilmiyorum
 
 
 ;There are no right or wrong answers, so please answer as honestly as you can.
-There are no right or wrong answers, so please answer as honestly as you can.
+Bu kısımda doğru veya yanlış yanıt yok. Lütfen olabildiğince adil şekilde yanıt vermeye çalışın.
 
 
 ;A. Firefox is made by Mozilla
-A. Firefox is made by Mozilla
+A. Firefox, Mozilla tarafından geliştirilir
 
 
 ;B. Mozilla is a non-profit organisation
-B. Mozilla is a non-profit organisation
+B. Mozilla kâr amacı gütmeyen bir kuruluştur
 
 
 ;C. Mozilla’s mission is to make the web a better place
-C. Mozilla’s mission is to make the web a better place
+C. Mozilla’nın amacı, web'i daha güzel bir yere dönüştürmektir
 
 
 ;D. Firefox was the first web browser
-D. Firefox was the first web browser
+D. Firefox ilk çıkan web tarayıcısıdır
 
 
 ;Which of the following would you say is your browser of choice?
-Which of the following would you say is your browser of choice?
+Aşağıdakilerden hangisi sizin tarayıcı tercihiniz?
 
 
 ;Which if any of the following Firefox services had you heard of before today?
-Which if any of the following Firefox services had you heard of before today?
+Bugüne kadar, aşağıdaki Firefox hizmetlerinden hangilerini duymuştunuz?
 
 
 ;Firefox Sync
-Firefox Sync
+Firefox Sync (Eşitleme)
 
 
 ;A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
-A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
+Firefox yüklü her bilgisayardan ve akıllı telefondan yer imlerinize, açık sekmelerinize ve tarama geçmişinize güvenli erişim sağlayan bir hizmet
 
 
 ;Firefox for Android
-Firefox for Android
+Android İçin Firefox
 
 
 ;The Firefox browser on an Android smartphone or tablet
-The Firefox browser on an Android smartphone or tablet
+Android akıllı telefonlara ve tabletlere yönelik Firefox tarayıcısı
 
 
 ;Mozilla Persona
@@ -222,7 +208,7 @@ Mozilla Persona
 
 
 ;An identity system that allows you to sign in to sites using an email address you choose.
-An identity system that allows you to sign in to sites using an email address you choose.
+Seçtiğiniz bir e-posta adresiyle sitelere oturum açmanızı sağlayan bir kimlik sistemi.
 
 
 ;Mozilla Marketplace
@@ -230,178 +216,178 @@ Mozilla Marketplace
 
 
 ;Mozilla's online store for Open Web apps
-Mozilla's online store for Open Web apps
+Açık Web uygulamaları için Mozilla'nın çevrimiçi mağazası
 
 
 ;Addons for Firefox
-Addons for Firefox
+Firefox Eklentileri
 
 
 ;Customisations you can make to Firefox to add more functionality to the browser.
-Customisations you can make to Firefox to add more functionality to the browser.
+Tarayıcınıza daha fazla işlev eklemek için Firefox'ta yapabileceğiniz özelleştirmeler.
 
 
 ;None of these
-None of these
+Hiçbirini duymamıştım
 
 
 ;Which if any of the following Firefox services are you using at the moment?
-Which if any of the following Firefox services are you using at the moment?
+Şu anda -varsa- aşağıdaki Firefox hizmetlerinden hangilerini kullanıyorsunuz?
 
 
 ;Based on these descriptions, which if any, would you be interested in using in the future?
-Based on these descriptions, which if any, would you be interested in using in the future?
+Yazılı açıklamalara dayanarak -varsa- hangilerini gelecekte kullanmayı düşünürsünüz?
 
 
 ;Approximately how long have you been using Firefox?
-Approximately how long have you been using Firefox?
+Yaklaşık ne kadar süredir Firefox'u kullanıyorsunuz?
 
 
 ;Up to 6 months
-Up to 6 months
+6 ay veya daha az
 
 
 ;6 months to a year
-6 months to a year
+6 ay - 1 yıl arası
 
 
 ;1 to 2 years
-1 to 2 years
+1 - 2 yıl arası
 
 
 ;2 to 3 years
-2 to 3 years
+2 - 3 yıl arası
 
 
 ;3 to 4 years
-3 to 4 years
+3 - 4 yıl arası
 
 
 ;4 to 5 years
-4 to 5 years
+4 - 5 yıl arası
 
 
 ;More than 5 years
-More than 5 years
+5 yıldan fazla
 
 
 ;Do you use any of the following to browse the internet?
-Do you use any of the following to browse the internet?
+İnternetten gezinmek için aşağıdakilerden hangilerini kullanıyorsunuz?
 
 
 ;Home PC or desktop computer
-Home PC or desktop computer
+Evde masaüstü bilgisayar
 
 
 ;Work PC or desktop computer
-Work PC or desktop computer
+İşte masaüstü bilgisayar
 
 
 ;Home laptop
-Home laptop
+Evde dizüstü bilgisayar
 
 
 ;Work laptop
-Work laptop
+İşte dizüstü bilgisayar
 
 
 ;Smartphone (eg: iPhone, Android phone)
-Smartphone (eg: iPhone, Android phone)
+Akıllı telefon (örn. iPhone, Android telefon)
 
 
 ;Tablet (eg: iPad)
-Tablet (eg: iPad)
+Tablet (örn. iPad)
 
 
 ;On average, approximately how many hours each day do you use the internet or browse web pages?
-On average, approximately how many hours each day do you use the internet or browse web pages?
+Günde ortalama kaç saat internet kullanıyor veya web sayfalarında geziniyorsunuz?
 
 
 ;Less than half an hour each day
-Less than half an hour each day
+Yarım saatten az
 
 
 ;About an hour a day
-About an hour a day
+Yaklaşık bir saat
 
 
 ;2 hours a day
-2 hours a day
+2 saat
 
 
 ;3 hours a day
-3 hours a day
+3 saat
 
 
 ;4 hours a day
-4 hours a day
+4 saat
 
 
 ;5 hours a day
-5 hours a day
+5 saat
 
 
 ;More than 6 hours a day
-More than 6 hours a day
+6 saatten fazla
 
 
 ;That is the end of the questionnaire. Thank you for your time.
-That is the end of the questionnaire. Thank you for your time.
+Anketimiz tamamlandı. Vakit ayırdığınız için teşekkür ederiz.
 
 
 ;Please enter a response
-Please enter a response
+Lütfen bir yanıt girin
 
 
 ;Illegal characters for single code input
-Illegal characters for single code input
+Tek kod girdisi için geçersiz karakterler
 
 
 ;Illegal characters for multi code input
-Illegal characters for multi code input
+Çoklu kod girdisi için geçersiz karakterler
 
 
 ;Please enter numbers only
-Please enter numbers only
+Lütfen sadece rakam girin
 
 
 ;Answer is outside of
-Answer is outside of
+Yanıtınız sınır dışında
 
 
 ;No answer code cannot be mixed with other codes
-No answer code cannot be mixed with other codes
+Yanıt kodları diğer kodlarla karıştırılamaz
 
 
 ;Too many replies maximum of …
-Too many replies maximum of …
+Çok fazla yanıt, maksimum …
 
 
 ;Number of replies must be exactly …
-Number of replies must be exactly …
+Yanıt sayısı tam olarak şu kadar olmalı …
 
 
 ;Too many characters
-Too many characters
+Çok fazla karakter
 
 
 ;Illegal string for this template
-Illegal string for this template
+Bu şablon için geçersiz dizgi
 
 
 ;Click here to go back into the survey
-Click here to go back into the survey
+Ankete geri dönmek için tıklayın
 
 
 ;Please answer highlighted question(s)
-Please answer highlighted question(s)
+Lütfen işaretli soruları yanıtlayın
 
 
 ;Please select one answer only.
-Please select one answer only.
+Lütfen sadee bir yanıt seçin.
 
 
 ;Please select as many answers as apply.
-Please select as many answers as apply.
+Lütfen size uygun olan tüm yanıtları işaretleyin.
 
 
