--- a/pt-BR/channelsposter.lang
+++ b/pt-BR/channelsposter.lang
@@ -26,16 +26,16 @@ Usuários pioneiros e fãs da Mozilla
 Oportunidade de testar a próxima versão do Firefox com estabilidade
 
 ;Mostly stable builds that need fine tuning and majority add-on compatibility
-Compilações mais estáveis que precisam de ajustes finos e compatibilidade com a grande maioria dos complementos
+Compilações mais estáveis que precisam de ajustes finos e são compatíveis com a grande maioria dos complementos
 
 ;Everyone! Released to the more than 400 million Firefox users worldwide
 Todos! Lançado para mais de 400 milhões de usuários do Firefox mundo afora
 
 ;The polished and stable features of Firefox that move the Web forward with great performance and unparalleled customization
-Recursos refinados e estáveis do Firefox que levam a internet para a frente com desempenho personalização sem igual
+Recursos refinados e estáveis do Firefox que levam a Internet para a frente com desempenho e personalização sem igual
 
 ;An awesome Web experience that answers to no one but you!
-Uma experiência na internet que responde somente a você!
+Uma experiência na Internet que responde somente a você!
 
 ;Web/platform developers, early adopters and adventure seekers
 Desenvolvedores, usuários avançados e caçadores de aventuras
