[it] first translation for bug 741360 (survey)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103731 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/it/survey1.lang
+++ b/it/survey1.lang
@@ -2,11 +2,11 @@
 
 
 ;Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
-Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
+Ti ringraziamo per aver scelto di partecipare a questa ricerca. Vorremmo farti alcune domande sul modo in cui utilizzi Internet, in particolare sul tuo browser. Il termine "browser" fa riferimento all'applicazione che ti permette di visualizzare le pagine web e navigare su Internet. Per completare il sondaggio saranno necessari circa 3 minuti.
 
 
 ;Which of the following age bands do you fall into?
-Which of the following age bands do you fall into?
+Qual è la tua fascia di età?
 
 
 ;16-24
@@ -30,23 +30,23 @@ Which of the following age bands do you fall into?
 
 
 ;65+
-65+
+Oltre 65
 
 
 ;Please indicate your gender
-Please indicate your gender
+Qual è il tuo sesso?
 
 
 ;Male
-Male
+Maschio
 
 
 ;Female
-Female
+Femmina
 
 
 ;Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
+Quale dei seguenti browser stai utilizzando attualmente sul tuo computer desktop o portatile, indifferentemente a casa oppure al lavoro?
 
 
 ;Apple Safari
@@ -70,135 +70,135 @@ Opera
 
 
 ;Another browser
-Another browser
+Un altro browser
 
 
 ;Don’t know
-Don’t know
+Non so
 
 
 ;How likely or unlikely are you to recommend Firefox to a friend or colleague?
-How likely or unlikely are you to recommend Firefox to a friend or colleague?
+Qual è la probabilità che tu consigli Firefox ad amici o colleghi?
 
 
 ;I am very likely and would consider making a recommendation without being asked
-I am very likely and would consider making a recommendation without being asked
+È molto probabile e potrei consigliarlo anche senza ricevere una richiesta esplicita sull'argomento
 
 
 ;I am quite likely to recommend Firefox and would do so if I was asked
-I am quite likely to recommend Firefox and would do so if I was asked
+È abbastanza probabile che consigli Firefox, lo farei se mi venisse richiesto
 
 
 ;I am neither likely nor unlikely
-I am neither likely nor unlikely
+Indifferente
 
 
 ;I am quite unlikely to recommend Firefox
-I am quite unlikely to recommend Firefox
+È abbastanza improbabile che consigli Firefox
 
 
 ;I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
-I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
+È molto improbabile che consigli Firefox e potrei anche sconsigliarlo se mi venisse richiesto
 
 
 ;And how much do you like or dislike Firefox?
-And how much do you like or dislike Firefox?
+Quanto ti piace o non ti piace Firefox?
 
 
 ;Dislike a great deal
-Dislike a great deal
+Non mi piace per nulla
 
 
 ;Dislike a little
-Dislike a little
+Non mi piace granché
 
 
 ;Neither like nor dislike
-Neither like nor dislike
+Indifferente
 
 
 ;Like a little
-Like a little
+Mi piace abbastanza
 
 
 ;Like a great deal
-Like a great deal
+Mi piace molto
 
 
 ;So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
-So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
+Quindi, prendendo in considerazione tutto, quanto sei soddisfatto o insoddisfatto di Firefox?
 
 
 ;Extremely dissatisfied
-Extremely dissatisfied
+Estremamente insoddisfatto
 
 
 ;Dissatisfied
-Dissatisfied
+Insoddisfatto
 
 
 ;Somewhat dissatisfied
-Somewhat dissatisfied
+Abbastanza insoddisfatto
 
 
 ;Neither satisfied nor dissatisfied
-Neither satisfied nor dissatisfied
+Indifferente
 
 
 ;Somewhat satisfied
-Somewhat satisfied
+Abbastanza soddisfatto
 
 
 ;Satisfied
-Satisfied
+Soddisfatto
 
 
 ;Extremely satisfied
-Extremely satisfied
+Estremamente soddisfatto
 
 
 ;For each of the following statements, could you please indicate whether you:
-For each of the following statements, could you please indicate whether you:
+Per ciascuna delle seguenti affermazioni, puoi indicare se:
 
 
 ;Were aware of this and believe it to be correct
-Were aware of this and believe it to be correct
+ne eri consapevole e lo ritieni corretto
 
 
 ;Have seen this but were unsure if it was right
-Have seen this but were unsure if it was right
+ne hai già sentito parlare ma non sei sicuro che sia giusto
 
 
 ;Have not heard of this before today, or I don’t know
-Have not heard of this before today, or I don’t know
+non ne hai mai sentito parlare prima d'oggi, oppure non conosci la risposta
 
 
 ;There are no right or wrong answers, so please answer as honestly as you can.
-There are no right or wrong answers, so please answer as honestly as you can.
+Non ci sono risposte giuste o sbagliate, per cui cerca di rispondere con la massima onestà.
 
 
 ;A. Firefox is made by Mozilla
-A. Firefox is made by Mozilla
+A. Firefox è realizzato da Mozilla
 
 
 ;B. Mozilla is a non-profit organisation
-B. Mozilla is a non-profit organisation
+B. Mozilla è un'organizzazione non-profit
 
 
 ;C. Mozilla’s mission is to make the web a better place
-C. Mozilla’s mission is to make the web a better place
+C. La missione di Mozilla è rendere il Web un luogo migliore
 
 
 ;D. Firefox was the first web browser
-D. Firefox was the first web browser
+D. Firefox è stato il primo browser web
 
 
 ;Which of the following would you say is your browser of choice?
-Which of the following would you say is your browser of choice?
+Quale dei seguenti è il tuo browser preferito?
 
 
 ;Which if any of the following Firefox services had you heard of before today?
-Which if any of the following Firefox services had you heard of before today?
+Hai mai sentito parlare prima d'oggi di questi servizi di Firefox?
 
 
 ;Firefox Sync
@@ -206,15 +206,15 @@ Firefox Sync
 
 
 ;A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
-A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
+Un servizio che ti offre accesso sicuro a segnalibri, schede aperte e cronologia di navigazione da qualunque dispositivo o cellulare con Firefox
 
 
 ;Firefox for Android
-Firefox for Android
+Firefox per Android
 
 
 ;The Firefox browser on an Android smartphone or tablet
-The Firefox browser on an Android smartphone or tablet
+Il browser Firefox per telefoni o tablet Android
 
 
 ;Mozilla Persona
@@ -222,7 +222,7 @@ Mozilla Persona
 
 
 ;An identity system that allows you to sign in to sites using an email address you choose.
-An identity system that allows you to sign in to sites using an email address you choose.
+Un sistema per la gestione dell'identità sul Web che ti permette di accedere ai siti utilizzando un indirizzo e-mail di tua scelta.
 
 
 ;Mozilla Marketplace
@@ -230,178 +230,178 @@ Mozilla Marketplace
 
 
 ;Mozilla's online store for Open Web apps
-Mozilla's online store for Open Web apps
+Il negozio online di Mozilla per le applicazioni Open Web
 
 
 ;Addons for Firefox
-Addons for Firefox
+Componenti aggiuntivi per Firefox
 
 
 ;Customisations you can make to Firefox to add more functionality to the browser.
-Customisations you can make to Firefox to add more functionality to the browser.
+Personalizzazioni che puoi apportare al tuo Firefox per aggiungere nuove funzioni al browser.
 
 
 ;None of these
-None of these
+Nessuno di questi
 
 
 ;Which if any of the following Firefox services are you using at the moment?
-Which if any of the following Firefox services are you using at the moment?
+Quali dei seguenti servizi di Firefox stai utilizzando attualmente?
 
 
 ;Based on these descriptions, which if any, would you be interested in using in the future?
-Based on these descriptions, which if any, would you be interested in using in the future?
+In base alla descrizione, quali dei seguenti servizi potresti utilizzare in futuro?
 
 
 ;Approximately how long have you been using Firefox?
-Approximately how long have you been using Firefox?
+Indicativamente da quanto tempo utilizzi Firefox?
 
 
 ;Up to 6 months
-Up to 6 months
+Meno di 6 mesi
 
 
 ;6 months to a year
-6 months to a year
+Da 6 mesi a 1 anno
 
 
 ;1 to 2 years
-1 to 2 years
+Da 1 a 2 annni
 
 
 ;2 to 3 years
-2 to 3 years
+Da 2 a 3 annni
 
 
 ;3 to 4 years
-3 to 4 years
+Da 3 a 4 annni
 
 
 ;4 to 5 years
-4 to 5 years
+Da 4 a 5 annni
 
 
 ;More than 5 years
-More than 5 years
+Più di 5 anni
 
 
 ;Do you use any of the following to browse the internet?
-Do you use any of the following to browse the internet?
+Che cosa utilizzi per navigare su Internet?
 
 
 ;Home PC or desktop computer
-Home PC or desktop computer
+PC o computer desktop a casa
 
 
 ;Work PC or desktop computer
-Work PC or desktop computer
+PC o computer desktop al lavoro
 
 
 ;Home laptop
-Home laptop
+Portatile a casa
 
 
 ;Work laptop
-Work laptop
+Portatile al lavoro
 
 
 ;Smartphone (eg: iPhone, Android phone)
-Smartphone (eg: iPhone, Android phone)
+Smartphone (ad es.: iPhone, cellulare Android)
 
 
 ;Tablet (eg: iPad)
-Tablet (eg: iPad)
+Tablet (ad es.: iPad)
 
 
 ;On average, approximately how many hours each day do you use the internet or browse web pages?
-On average, approximately how many hours each day do you use the internet or browse web pages?
+In media quante ore al giorno passi navigando su Internet?
 
 
 ;Less than half an hour each day
-Less than half an hour each day
+Meno di mezz'ora al giorno
 
 
 ;About an hour a day
-About an hour a day
+Circa un'ora al giorno
 
 
 ;2 hours a day
-2 hours a day
+2 ore al giorno
 
 
 ;3 hours a day
-3 hours a day
+3 ore al giorno
 
 
 ;4 hours a day
-4 hours a day
+4 ore al giorno
 
 
 ;5 hours a day
-5 hours a day
+5 ore al giorno
 
 
 ;More than 6 hours a day
-More than 6 hours a day
+Più di 6 ore al giorno
 
 
 ;That is the end of the questionnaire. Thank you for your time.
-That is the end of the questionnaire. Thank you for your time.
+Il sondaggio è terminato. Grazie per averci dedicato il tuo tempo.
 
 
 ;Please enter a response
-Please enter a response
+Inserisci una risposta
 
 
 ;Illegal characters for single code input
-Illegal characters for single code input
+Caratteri non consentiti per single code input
 
 
 ;Illegal characters for multi code input
-Illegal characters for multi code input
+Caratteri non consentiti per multi code input
 
 
 ;Please enter numbers only
-Please enter numbers only
+Inserisci solamente dei numeri
 
 
 ;Answer is outside of
-Answer is outside of
+La risposta è al di fuori di
 
 
 ;No answer code cannot be mixed with other codes
-No answer code cannot be mixed with other codes
+Non è possibile combinare il codice risposta con altri codici
 
 
 ;Too many replies maximum of …
-Too many replies maximum of …
+Numero eccessivo di risposte rispetto al massimo consentito di …
 
 
 ;Number of replies must be exactly …
-Number of replies must be exactly …
+Il numero delle risposte deve essere esattamente …
 
 
 ;Too many characters
-Too many characters
+Numero eccessivo di caratteri
 
 
 ;Illegal string for this template
-Illegal string for this template
+Stringa non valida per questo modello
 
 
 ;Click here to go back into the survey
-Click here to go back into the survey
+Fai clic qui per ritornare al sondaggio
 
 
 ;Please answer highlighted question(s)
-Please answer highlighted question(s)
+Rispondi alle domande evidenziate
 
 
 ;Please select one answer only.
-Please select one answer only.
+Seleziona solamente una risposta.
 
 
 ;Please select as many answers as apply.
-Please select as many answers as apply.
+Seleziona tutte le risposte necessarie.
 
 
