German changes for Bug 741355
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103732 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/survey1.lang
+++ b/de/survey1.lang
@@ -2,7 +2,7 @@
 
 
 ;Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
-Vielen Dank, dass Sie uns bei dieser Untersuchung helfen. Wir möchten Ihnen einige Fragen zur Verwendung des Internets stellen, besonders dazu, welches Browser-Programm Sie dazu verwenden. Der Begriff „Browser“ ist der Name der Anwendung,die Internetseiten anzeigt und Ihnen das Surfen im Internet ermöglicht. Das Ausfüllen des Fragebogens sollte etwa 3 Minuten in Anspruch nehmen, falls Sie zur Zielgruppe gehören.
+Vielen Dank, dass Sie uns bei dieser Studie helfen. Wir möchten Ihnen einige Fragen dazu stellen, wie Sie das Internet verwenden, insbesondere welches Browser-Programm Sie dafür nutzen. Der Begriff „Browser“ ist der Name der Anwendung, die Internetseiten anzeigt und Ihnen das Surfen im Internet ermöglicht. Das Ausfüllen des Fragebogens wird etwa 3 Minuten in Anspruch nehmen, falls Sie zur Zielgruppe gehören.
 
 
 ;Which of the following age bands do you fall into?
@@ -46,7 +46,7 @@ Weiblich
 
 
 ;Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-Welche der folgenden Webbrowser verwenden Sie zur Zeit auf Ihrem Desktop-Rechner oder Laptop, zu Hause oder auf der Arbeit?
+Welchen der folgenden Browser verwenden Sie zur Zeit auf Ihrem Desktop-Rechner oder Laptop, zu Hause oder auf der Arbeit?
 
 
 ;Apple Safari
@@ -82,15 +82,15 @@ Wie wahrscheinlich oder unwahrscheinlich ist es, dass Sie Firefox einem Freund o
 
 
 ;I am very likely and would consider making a recommendation without being asked
-Es ist sehr wahrscheinlich und würde ihn vielleicht auch empfehlen, ohne gefragt zu werden
+Es ist sehr wahrscheinlich und ich würde ihn auch empfehlen, ohne gefragt zu werden
 
 
 ;I am quite likely to recommend Firefox and would do so if I was asked
-Es ist ziemlich wahrscheinlich, dass Firefox empfehlen würde und würde das tun, wenn ich gefragt würde
+Es ist ziemlich wahrscheinlich, dass ich Firefox empfehlen würde, und ich würde es tun, wenn ich gefragt würde
 
 
 ;I am neither likely nor unlikely
-Es ist weder wahrscheinlich, noch unwahrscheinlich
+Es ist weder wahrscheinlich noch unwahrscheinlich
 
 
 ;I am quite unlikely to recommend Firefox
@@ -98,7 +98,7 @@ Es ist ziemlich unwahrscheinlich, dass ich Firefox empfehlen würde
 
 
 ;I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
-Es ist sehr unwahrscheinlich, dass ich Firefox empfehlen würde und ich würde vielleicht sogar von ihm abraten
+Es ist sehr unwahrscheinlich, dass ich Firefox empfehlen würde, und ich würde vielleicht sogar von ihm abraten
 
 
 ;And how much do you like or dislike Firefox?
@@ -190,7 +190,7 @@ C. Mozillas Mission ist es, das Internet zu einem besseren Ort zu machen
 
 
 ;D. Firefox was the first web browser
-D. Firefox war der erste Webbrowser
+D. Firefox war der erste Browser
 
 
 ;Which of the following would you say is your browser of choice?
@@ -218,7 +218,7 @@ Der Firefox-Browser auf einem Android-Smartphone oder -Tablet
 
 
 ;Mozilla Persona
-Mozilla Persona {ok}
+Mozilla-Persona
 
 
 ;An identity system that allows you to sign in to sites using an email address you choose.
@@ -230,7 +230,7 @@ Mozilla-Marktplatz
 
 
 ;Mozilla's online store for Open Web apps
-Mozillas Online-Laden für Anwendungen des offenen Internets
+Mozillas Online-Laden für offene Internet-Anwendungen
 
 
 ;Addons for Firefox
@@ -290,11 +290,11 @@ Verwenden Sie einen der folgenden zum Surfen im Internet?
 
 
 ;Home PC or desktop computer
-Wohnzimmer-PC oder Desktop-PC
+Wohnzimmer-PC oder Desktop-Rechner
 
 
 ;Work PC or desktop computer
-Arbeits-PC oder Desktop-PC
+Arbeits-PC oder Desktop-Rechner
 
 
 ;Home laptop
@@ -314,7 +314,7 @@ Tablet (z.B.: iPad)
 
 
 ;On average, approximately how many hours each day do you use the internet or browse web pages?
-Wie viele Stunden verwenden Sie durchschnittlich ungefähr am Tag das Internet oder surfen auf Webseiten?
+Wie viele Stunden am Tag verwenden Sie durchschnittlich ungefähr das Internet oder surfen auf Internetseiten?
 
 
 ;Less than half an hour each day
