--- a/de/survey1.lang
+++ b/de/survey1.lang
@@ -46,7 +46,7 @@ Weiblich
 
 
 ;Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-Welche der folgenden Browser verwenden Sie zur Zeit auf Ihrem Desktop-Rechner oder Laptop, zu Hause oder auf der Arbeit?
+Welchen der folgenden Browser verwenden Sie zur Zeit auf Ihrem Desktop-Rechner oder Laptop, zu Hause oder auf der Arbeit?
 
 
 ;Apple Safari
