--- a/es-AR/newsletter.lang
+++ b/es-AR/newsletter.lang
@@ -114,7 +114,7 @@ Firefox también está en tus redes sociales favoritas. Conectate con nosotros y
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Administrá tus <span>suscripciones a los boletines</span>
 
 
 ;Subscribe
