[it] QA on April survey
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103753 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/it/survey1.lang
+++ b/it/survey1.lang
@@ -78,15 +78,15 @@ Non so
 
 
 ;How likely or unlikely are you to recommend Firefox to a friend or colleague?
-Qual è la probabilità che tu consigli Firefox ad amici o colleghi?
+Con quale probabilità consiglieresti Firefox ad amici o colleghi?
 
 
 ;I am very likely and would consider making a recommendation without being asked
-È molto probabile e potrei consigliarlo anche senza ricevere una richiesta esplicita sull'argomento
+È molto probabile che lo consigli, anche senza ricevere una richiesta esplicita sull'argomento
 
 
 ;I am quite likely to recommend Firefox and would do so if I was asked
-È abbastanza probabile che consigli Firefox, lo farei se mi venisse richiesto
+È abbastanza probabile che lo consigli, se mi viene richiesto
 
 
 ;I am neither likely nor unlikely
@@ -98,7 +98,7 @@ Indifferente
 
 
 ;I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
-È molto improbabile che consigli Firefox e potrei anche sconsigliarlo se mi venisse richiesto
+È molto improbabile che lo consigli, e potrei sconsigliarlo se mi venisse richiesto
 
 
 ;And how much do you like or dislike Firefox?
@@ -126,7 +126,7 @@ Mi piace molto
 
 
 ;So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
-Quindi, prendendo in considerazione tutto, quanto sei soddisfatto o insoddisfatto di Firefox?
+Quindi, tenendo tutto questo in considerazione, quanto sei soddisfatto o insoddisfatto di Firefox?
 
 
 ;Extremely dissatisfied
@@ -214,7 +214,7 @@ Firefox per Android
 
 
 ;The Firefox browser on an Android smartphone or tablet
-Il browser Firefox per telefoni o tablet Android
+Il browser Firefox per smartphone o tablet Android
 
 
 ;Mozilla Persona
